# TraXXtu

./: README.md
Firmware/: CMakeLists.txt
Firmware/src/: hw_config.c  main.cpp
Hardware/TraxXturE_board/: TraxXturE_board.kicad_prl  TraxXturE_board.kicad_pro  TraxXturE_board.kicad_sch  archi_dia.kicad_sch  blck_dia.kicad_sch  gsm_gps_circuitry.kicad_sch  ignition_shutdown.kicad_sch  mcu_circuitry.kicad_sch  power_cct.kicad_sch
